3lang/Grammar
PROGRAM:
	STATEMENTS

STATEMENTS:
	STATEMENT STATEMENTS
	STATEMENT

STATEMENT:
	if CONDITION { STATEMENTS }
	if CONDITION { STATEMENTS } else { STATEMENTS }
	while CONDITION { STATEMENTS }
	ASSIGNMENT
	function $identifier (PAR1, ... , PARn) { STATEMENTS }
	$identifier(EXPRESSION, ... , EXPRESSION);
			
CONDITION:
	(EXPRESSION)

ASSIGNMENT:
	var $identifier;
	var $identifier = EXPRESSION;
	$identifier = EXPRESSION;
	
EXPRESSION:
	$identifier
	$integer
	$bool
	$string
	
	(EXPRESSION)
	
	EXPRESSION + EXPRESSION
	EXPRESSION - EXPRESSION
	EXPRESSION * EXPRESSION
	EXPRESSION / EXPRESSION

	EXPRESSION && EXPRESSION
	EXPRESSION || EXPRESSION	
	EXPRESSION != EXPRESSION
	EXPRESSION = EXPRESSION
	EXPRESSION < EXPRESSION
	EXPRESSION > EXPRESSION
	EXPRESSION <= EXPRESSION
	EXPRESSION >= EXPRESSION


$integer -> 0,1,2,3,4
$identifier -> a12, $$, $__, tmp, A1__$
$bool -> true, false
$string -> "I am a string", ";", ""
